<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="6dp"
    android:layout_margin="8dp"
    app:cardElevation="6dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:padding="8dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:layout_marginBottom="3dp"
        android:textColor="@android:color/background_light"
        android:background="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:gravity="center"
        android:id="@+id/tvCountry"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

        <RelativeLayout
            android:padding="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/affects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:textColor="@android:color/background_light"
                android:id="@+id/tvCases"
                android:gravity="center"
                android:background="@drawable/count_bg"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <RelativeLayout
            android:gravity="center"
            android:padding="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/today_affects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:textColor="@android:color/background_light"
                android:id="@+id/tvTodayCases"
                android:gravity="center"
                android:background="@drawable/count_bg"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <RelativeLayout
            android:gravity="center"
            android:padding="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/deaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:textColor="@android:color/background_light"
                android:id="@+id/tvDeath"
                android:gravity="center"
                android:background="@drawable/count_bg"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <RelativeLayout
            android:gravity="center"
            android:padding="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/today_deaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:textColor="@android:color/background_light"
                android:id="@+id/tvTodayDeaths"
                android:gravity="center"
                android:background="@drawable/count_bg"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <RelativeLayout
            android:gravity="center"
            android:padding="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/recovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:textColor="@android:color/background_light"
                android:id="@+id/tvRecovered"
                android:gravity="center"
                android:background="@drawable/count_bg"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>


        <RelativeLayout
            android:gravity="center"
            android:padding="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:textColor="@android:color/background_light"
                android:id="@+id/tvActive"
                android:gravity="center"
                android:background="@drawable/count_bg"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <RelativeLayout
            android:gravity="center"
            android:padding="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/critical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:textColor="@android:color/background_light"
                android:id="@+id/tvCritical"
                android:gravity="center"
                android:background="@drawable/count_bg"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>