<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UI.Main.MainFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/world_status"
                android:text="@string/worldwide_status"
                android:textColor="@android:color/background_light"
                android:background="@color/colorPrimary"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_below="@id/world_status"
                android:id="@+id/worldwide"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:text="@string/affects"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:text="@string/load_data"
                        android:id="@+id/casesText"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>


                <LinearLayout
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="#F44336"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:text="@string/deaths"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:textColor="#F44336"
                        android:id="@+id/deathsText"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:text="@string/load_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="#4CAF50"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:text="@string/recovered"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:textColor="#4CAF50"
                        android:id="@+id/recoveredText"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:text="@string/load_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/mmContainer"
                android:layout_below="@id/worldwide"
                android:layout_width="match_parent"
                app:cardCornerRadius="6dp"
                android:layout_margin="8dp"
                app:cardElevation="6dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:padding="8dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/myanmar_status"
                        android:layout_marginBottom="3dp"
                        android:textColor="@android:color/background_light"
                        android:background="@color/colorPrimary"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:gravity="center"
                        android:id="@+id/tvCountry"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"/>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerViewX"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    <TextView
                        android:gravity="center"
                        android:text="@string/load_data"
                        android:layout_marginTop="10dp"
                        android:id="@+id/last_update"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

</androidx.core.widget.NestedScrollView>