<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.total.TotalFragment">

    <LinearLayout
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity="center"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:text="@string/affects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/wait"
                android:id="@+id/casesText"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>


    <LinearLayout
        android:gravity="center"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="#F44336"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:text="@string/deaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textColor="#F44336"
            android:id="@+id/deathsText"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/wait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="#4CAF50"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:text="@string/recovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textColor="#4CAF50"
            android:id="@+id/recoveredText"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/wait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    </LinearLayout>

</RelativeLayout>