<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="6dp"
    android:layout_margin="8dp"
    app:cardElevation="6dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:padding="8dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:src="@drawable/dev"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"/>

        <LinearLayout
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/fb"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:cardCornerRadius="6dp"
                android:layout_margin="8dp"
                app:cardElevation="6dp">

                <ImageView
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:padding="8dp"
                    android:src="@drawable/ic_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:id="@+id/github"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:cardCornerRadius="6dp"
                android:layout_margin="8dp"
                app:cardElevation="6dp">

                <ImageView
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:padding="2dp"
                    android:src="@drawable/ic_github"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/youtube"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:cardCornerRadius="6dp"
                android:layout_margin="8dp"
                app:cardElevation="6dp">
                <ImageView
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:padding="2dp"
                    android:src="@drawable/ic_youtube"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/web"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:cardCornerRadius="6dp"
                android:layout_margin="8dp"
                app:cardElevation="6dp">

                <ImageView
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:padding="2dp"
                    android:src="@drawable/ic_web"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/app_info"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            app:cardCornerRadius="6dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:padding="8dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_margin="1dp"
                    android:text="@string/developer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_margin="1dp"
                    android:text="@string/version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_margin="1dp"
                    android:text="@string/updated_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:padding="8dp"
            android:id="@+id/info_note"
            android:textColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:linksClickable="false"
            android:text="@string/about_wm_text"
            android:autoLink="web"
            android:id="@+id/worldmeter"
            android:maxLines="1"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:linksClickable="false"
            android:text="@string/about_mohs_text"
            android:autoLink="web"
            android:id="@+id/mohs"
            android:maxLines="1"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/feedback"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            app:cardCornerRadius="6dp"
            android:layout_margin="8dp"
            app:cardElevation="6dp">

            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</ScrollView>