<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UI.Note.NoteFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:textColor="@android:color/holo_red_light"
        android:padding="8dp"
        android:text="@string/fake_news_notice"
        android:layout_marginBottom="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/mohs"
        android:layout_marginBottom="3dp"
        android:textColor="@android:color/background_light"
        android:background="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:gravity="center"
        android:id="@+id/tvCountry"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/mohsFb"
            android:layout_width="wrap_content"
            app:cardCornerRadius="6dp"
            android:layout_margin="8dp"
            app:cardElevation="6dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:padding="8dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:adjustViewBounds="true"
                    android:src="@drawable/mohs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/fb_page"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/mohsWebsite"
            android:layout_width="wrap_content"
            app:cardCornerRadius="6dp"
            android:layout_margin="8dp"
            app:cardElevation="6dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:padding="8dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:adjustViewBounds="true"
                    android:src="@drawable/mohs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:layout_marginTop="5dp"
        android:text="@string/who"
        android:layout_marginBottom="3dp"
        android:textColor="@android:color/background_light"
        android:background="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/whoFb"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            app:cardCornerRadius="6dp"
            android:layout_margin="8dp"
            app:cardElevation="6dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:padding="8dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:adjustViewBounds="true"
                    android:src="@drawable/who"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/fb_page"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/whoWebsite"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            app:cardCornerRadius="6dp"
            android:layout_margin="8dp"
            app:cardElevation="6dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:padding="8dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:adjustViewBounds="true"
                    android:src="@drawable/who"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>